<resources>
    <string name="app_name">Piper</string>
    <string name="login">Log In</string>
    <string name="create">Create Account</string>
    <string name="linktext">Forgot Password/Username?</string>
    <string name="title_activity_feed">feed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home"> </string>
    <string name="title_search"> </string>
    <string name="title_upload"> </string>
    <string name="title_notifs"> </string>
    <string name="title_profile"> </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user">Username:</string>
    <string name="pass">Password:</string>
    <string name="email">Email:</string>
    <string name="emailex">johnapple@gmail.com</string>
    <string name="dobex">01/01/2000</string>
    <string name="dob">Date of Birth:</string>
    <string name="fn">First Name:</string>
    <string name="ln">Last Name:</string>
    <string name="createv2">Create</string>
    <string name="fixacc_1">Enter your Email:</string>
    <string name="fixacc_2">Enter your Date of Birth:</string>
    <string name="submit">Submit</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
