<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:text="@string/fn"
        android:layout_marginTop="14dp"
        android:textSize="10pt"/>

    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/firstname"
        android:layout_marginTop="55dp"
        android:text="@string/ln"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/firstname"
        android:layout_marginTop="92dp"
        android:text="@string/dob"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/dobinput"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_marginBottom="-155dp"
        android:layout_toEndOf="@+id/dob"
        android:background="@drawable/input_text_design"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/dobex"
        android:textAlignment="center"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/firstname"
        android:layout_marginTop="155dp"
        android:text="@string/email"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/fninput"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/firstname"
        android:layout_toEndOf="@+id/dob"
        android:background="@drawable/input_text_design"
        android:text=""
        android:textAlignment="center"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/lninput"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lastname"
        android:layout_toEndOf="@+id/dob"
        android:background="@drawable/input_text_design"
        android:text=""
        android:textAlignment="center"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/emailinput"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dobinput"
        android:layout_alignParentTop="true"
        android:layout_marginTop="198dp"
        android:background="@drawable/input_text_design"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:hint="@string/emailex"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/firstname"
        android:layout_below="@+id/emailinput"
        android:text="@string/user"
        android:textAlignment="center"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/userinput"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="216dp"
        android:background="@drawable/input_text_design"
        android:text=""
        android:textAlignment="center"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/firstname"
        android:layout_marginBottom="171dp"
        android:text="@string/pass"
        android:textSize="10pt" />

    <EditText
        android:id="@+id/passwordinput"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-168dp"
        android:background="@drawable/input_text_design"
        android:inputType="textVisiblePassword"
        android:text=""
        android:textSize="10pt" />

    <Button
        android:id="@+id/crtbutton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:background="@drawable/button_design"
        android:text="@string/create" />

</RelativeLayout>